_sass/_nav.scss
.site-header__navigation {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
  background-color: $white;
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  transition: 0.10s;
  overflow-x: scroll;
}

.navigation__toggle__container {
   display: flex;
   justify-content: center;
   padding: 5vh 10vw 0;
}

.navigation__toggle-close {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 55px;
  height: 42px;
  padding: 8px 6px;
  border: 0;
  background: transparent;
}

.navigation__toggle-close__line {
  height: 4px;
  width: 100%;
  border-radius: 10px;
  background: $red;
}

.navigation__toggle-close__line:first-child {
  transform: translateY(10px) rotateZ(225deg);
  transform-origin: 31px 10px;
}

.navigation__toggle-close__line:nth-child(2) {
  display: none;
  transform: rotateZ(90deg);
}

.navigation__toggle-close__line:last-child {
  transform: translateY(-10px) rotateZ(135deg);
}

.navigation__toggle-close__line--active
.navigation__toggle-close__line {
  height: 4px;
  width: 100%;
  border-radius: 10px;
  background: #fff;
}

.site-navigation {
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: space-between;
  height: 380px;
  padding: 10vh 0;
}

.site-navigation__item {
  font-size: 30px;
  font-weight: 800;
  letter-spacing: 4px;
  text-align: center;
  text-transform: uppercase;
  color: $yellow;
}

.site-navigation__item:hover {
  text-decoration: underline;
  line-height: normal;
  font-size: 40px;
  margin: 0;
  padding: 0;
}

.site-header__navigation {
  display: none;
}

